# ocr-bench

./: ARCHIVE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
experiments/adaptive-stopping/: README.md  elo-deltas.csv  multi-board-results.json  multi-board-summary.csv  multi_board.py  replay.py  results-sentinels-excluded.json  results.json  round-history.csv  static-design-summary.csv  strategy-summary.csv
experiments/adaptive-stopping/moh/: README.md  elo-deltas.csv  results.json  round-history.csv  static-design-summary.csv  strategy-summary.csv
experiments/olmocr-bench-oldscans/: BENCHMARKING.md  README.md  convert.py  gen_samples.py  nuextract3.py  olmocr2.py  samples.html  score.py  unlimited_ocr.py
src/ocr_bench/: adaptive.py  backends.py  cli.py  dataset.py  elo.py  integrity.py  judge.py  publish.py  run.py  standard_eval.py  validate.py  viewer.py  web.py
src/ocr_bench/static/: style.css
src/ocr_bench/templates/: base.html  comparison_card.html  comparisons.html  leaderboard.html  stats_panel.html
tests/: test_adaptive.py  test_adaptive_replay_experiment.py  test_backends.py  test_budget_checkpoint.py  test_cli.py  test_dataset.py  test_elo.py  test_integrity.py  test_judge.py  test_properties.py  test_publish.py  test_publish_space.py  test_run.py  test_validate.py  test_viewer.py  test_web.py
